--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1"
   }
 }
